--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="home-banner">
             <div class="home-content">
                 <h2 class="text1">Hello, I am</h2>
-                <h1 class="text2">Muhammad Hamza</h1>
+                <h1 class="text2">Sheikh Muhammad Hamza</h1>
                 <h4 class="text3">frontent & backend | developer</h4>
                 <a href="#" class="">Hire me</a>
             </div>
